--- a/start.html
+++ b/start.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>my start file is not index.html file</h1>
+    <img src="203691860_1008054470021598_626739860036600751_n.jpg" alt="">
 </body>
 </html>
