--- a/start.html
+++ b/start.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>my start file is not index.html file</h1>
+    <div>
+        <h3>New blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, nam assumenda alias commodi provident esse reiciendis ducimus mollitia magnam unde tenetur maiores laudantium tempore pariatur. Quas, dolore nemo inventore doloremque praesentium hic sit deserunt, enim soluta tempore saepe nisi nihil.</p>
+    </div>
     <img src="203691860_1008054470021598_626739860036600751_n.jpg" alt="">
 </body>
 </html>
